--- a/index1.html
+++ b/index1.html
@@ -33,21 +33,25 @@
 
 			<ul id="largeJars"><h3>Large jars</h3>
 				<li class="item"><img src="images/lrg_strw.png"><p><span class="fragrance">Strawberry cake</span>
-				</br>The aroma of buttery cake with fresh sliced strawberries and rich vanilla cream.</p><div class="howMany">Price: £20</br><input class="spinner" id="inp1" type="spinner" placeholder="Qty"><button type="submit" onclick="count(1)">Add</button></div></li>
+				</br>The aroma of buttery cake with fresh sliced strawberries and rich vanilla cream.</p>
+				<div class="howMany">Price: £20</br><input class="spinner" id="inp1" type="number" placeholder="Qty"><button type="submit" onclick="count(1)">Add</button></div></li>
 				<div style="clear:both"></div>
 				
 				<li class="item"><img src="images/peaches.png"><p><span class="fragrance">Peaches cocktail</span>
-				</br>The uplifting aroma of sweet fresh peaches with prosecco.</p><div class="howMany">Price: £20</br><input class="spinner" id="inp2" type="spinner" placeholder="Qty"><button type="submit" onclick="count(2)">Add</button></div></li>
+				</br>The uplifting aroma of sweet fresh peaches with prosecco.</p>
+				<div class="howMany">Price: £20</br><input class="spinner" id="inp2" type="number" placeholder="Qty"><button type="submit" onclick="count(2)">Add</button></div></li>
 				<div style="clear:both"></div>
 				
 				<li class="item"><img src="images/lollip.png"><p><span class="fragrance">Sweet lollipops</span>
-				</br>Notes of cotton candy, vanilla and caramel with bergamot, orange and berries.</p><div class="howMany">Price: £20</br><input class="spinner" id="inp3" type="spinner" placeholder="Qty"><button type="submit" onclick="count(3)">Add</button></div></li>
+				</br>Notes of cotton candy, vanilla and caramel with bergamot, orange and berries.</p>
+				<div class="howMany">Price: £20</br><input class="spinner" id="inp3" type="number" placeholder="Qty"><button type="submit" onclick="count(3)">Add</button></div></li>
 				<div style="clear:both"></div>
 				<div id="lgSum">Total: 0 large jars</div>
 			</ul>
 			<ul id="Spheres"><h3>Spheres</h3>
 				<li class="item"><img src="images/ocean.png"><p><span class="fragrance">Ocean in the sun</span>
-				</br>	This scent captures the atmosphere and attitude of summer by the ocean.</p><div class="howMany"></div></li>
+				</br>	This scent captures the atmosphere and attitude of summer by the ocean.</p>
+				<div class="howMany"></div></li>
 				<li class="item"><img src="images/yoghurt.png"><p><span class="fragrance">Delicious yoghurt</span></br>Delicious yoghurt with sweet sugar cane and vanilla extract.
 				</p><div class="howMany"></div></li>
 				<li class="item"><img src="images/jellies.png"><p><span class="fragrance">Sweetest jellies</span></br>Sweet cotton candy fragrance with fruity notes of strawberry and raspberry.
